chore: prep field for fe
